# ada_final

./: .gitignore  KNN.ipynb  README.md  RF_model.ipynb  data_collection.py  eda.py  features_readme.md  gradient_boosting.py  pyproject.toml  setup.py
data/processed/: central_park_temp_with_features.csv  data_with_lag_features.csv  merged_dataset.csv
data/raw/: central_park_temperature_data.csv  epa_air_quality_data.csv  holiday_event_data.csv  meteostat_weather_data.csv  nasa_power_data.csv  noaa_temperature_data.csv  urban_heat_island_data.csv  visual_crossing_weather_data.csv
