[tool.poetry]
name = "ada-final"
version = "0.1.0"
description = ""
authors = ["alexfriedman <alex.friedman@modo.energy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
plotly = "^6.0.1"
requests = "^2.32.3"
meteostat = "^1.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
